--- a/TPSProject.uproject
+++ b/TPSProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{1335008A-4A94-9923-CF89-B6A5C67488F7}",
+	"EngineAssociation": "4.24",
 	"Category": "",
 	"Description": "",
 	"Modules": [
